Tighten trade recording APIs