@@ -4,6 +4,7 @@
 package org.ta4j.core;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.time.Instant;
 import org.junit.jupiter.api.Test;
@@ -15,7 +16,7 @@ import org.ta4j.core.num.Num;
 class TradeFillExecutionTest {
 
     @Test
-    void recordExecutionFillAcceptsTradeFill() {
+    void operateAcceptsTradeBuiltFromTradeFill() {
         Num price = DoubleNumFactory.getInstance().numOf(100);
         Num amount = DoubleNumFactory.getInstance().numOf(1);
         TradeFill fill = new TradeFill(5, Instant.parse("2025-01-01T00:00:00Z"), price, amount, null, ExecutionSide.BUY,
@@ -23,21 +24,21 @@ class TradeFillExecutionTest {
 
         BaseTradingRecord record = new BaseTradingRecord(TradeType.BUY, ExecutionMatchPolicy.FIFO, new ZeroCostModel(),
                 new ZeroCostModel(), null, null);
-        record.recordExecutionFill(fill);
+        record.operate(Trade.fromFill(fill));
 
         assertEquals(1, record.getTrades().size());
         assertEquals("corr-1", record.getTrades().get(0).getCorrelationId());
     }
 
     @Test
-    void recordExecutionFillKeepsExplicitIndex() {
+    void operateKeepsExplicitIndexFromTradeFill() {
         Num price = DoubleNumFactory.getInstance().numOf(101);
         Num amount = DoubleNumFactory.getInstance().numOf(2);
         TradeFill fill = new TradeFill(7, Instant.parse("2025-01-01T00:00:00Z"), price, amount, ExecutionSide.BUY);
 
         BaseTradingRecord record = new BaseTradingRecord(TradeType.BUY, ExecutionMatchPolicy.FIFO, new ZeroCostModel(),
                 new ZeroCostModel(), null, null);
-        record.recordExecutionFill(fill);
+        record.operate(Trade.fromFill(fill));
 
         assertEquals(1, record.getTrades().size());
         assertEquals(7, record.getTrades().getFirst().getIndex());
@@ -45,20 +46,25 @@ class TradeFillExecutionTest {
     }
 
     @Test
-    void recordExecutionFillInfersMissingSideAndTime() {
+    void tradeFromFillRequiresExplicitSide() {
         Num price = DoubleNumFactory.getInstance().numOf(100);
         Num amount = DoubleNumFactory.getInstance().numOf(1);
-        TradeFill fillWithoutMetadata = new TradeFill(-1, null, price, amount, null, null, null, null);
+        TradeFill fillWithoutSide = new TradeFill(-1, null, price, amount, null, null, null, null);
+
+        assertThrows(IllegalArgumentException.class, () -> Trade.fromFill(fillWithoutSide));
+    }
+
+    @Test
+    void operateFromTradeFillDefaultsMissingTimeToEpoch() {
+        Num price = DoubleNumFactory.getInstance().numOf(100);
+        Num amount = DoubleNumFactory.getInstance().numOf(1);
+        TradeFill fillWithoutTime = new TradeFill(-1, null, price, amount, null, ExecutionSide.BUY, null, null);
 
         BaseTradingRecord record = new BaseTradingRecord(TradeType.BUY, ExecutionMatchPolicy.FIFO, new ZeroCostModel(),
                 new ZeroCostModel(), null, null);
-        record.recordExecutionFill(fillWithoutMetadata);
-        record.recordExecutionFill(fillWithoutMetadata);
+        record.operate(Trade.fromFill(fillWithoutTime));
 
-        assertEquals(2, record.getTrades().size());
-        assertEquals(TradeType.BUY, record.getTrades().get(0).getType());
-        assertEquals(TradeType.SELL, record.getTrades().get(1).getType());
-        assertEquals(Instant.EPOCH, record.getTrades().get(0).getTime());
-        assertEquals(Instant.EPOCH, record.getTrades().get(1).getTime());
+        assertEquals(1, record.getTrades().size());
+        assertEquals(Instant.EPOCH, record.getTrades().getFirst().getTime());
     }
 }
